--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ window.recaptchaVerifier = new RecaptchaVerifier(auth, 'recaptcha-container', {
 
 
 const adminCredentials = {
-  username: "adminuser",
+  username: "aditya taywade",
   password: "789456123"
 };
 
