--- a/payment.html
+++ b/payment.html
@@ -38,7 +38,7 @@
       <span class="close-btn-modern" onclick="closePaymentPopup()">&times;</span>
       <h2>Scan to Pay</h2>
       <img src="payment.jpg" alt="QR Code" class="qr-img-modern" />
-      <p class="upi-id-modern">UPI ID: <strong>yourupi@bank</strong></p>
+      <p class="upi-id-modern">UPI ID: <strong>dipaktaywade3@okaxis</strong></p>
       <h3>After payment</h3>
       <div class="payment-id-section">
         <input type="text" id="manualPaymentId" placeholder="Enter your UPI Reference ID" />
