--- a/index.html
+++ b/index.html
@@ -200,10 +200,10 @@
         <div class="footer-link-column">
           <h3>Follow Us</h3>
           <ul class="social-media">
-            <li><a href="#" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#" class="social-icon twitter"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#" class="social-icon instagram"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#" class="social-icon linkedin"><i class="fab fa-linkedin"></i></a></li>
+            <!-- <li><a href="#" class="social-icon facebook"><i class="fab fa-facebook-f"></i></a></li>
+            <li><a href="#" class="social-icon twitter"><i class="fab fa-twitter"></i></a></li> -->
+            <li><a href="https://www.instagram.com/aditya_taywade123?igsh=MWg2d2l6c2R1amZjZw==" class="social-icon instagram"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/aditya-taywade-b514b4331?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-icon linkedin"><i class="fab fa-linkedin"></i></a></li>
           </ul>
         </div>
       </div>
